# nrf5340-dk-experiments

./: README.md
doc/: led-battery-controller-frame.dxf
max6675-temp-sensor/: CMakeLists.txt  nrf52840dk_nrf52840.overlay  nrf5340dk_nrf5340_cpuapp.overlay  prj.conf
max6675-temp-sensor/src/: gui.c  gui.h  main.c
virtual-leash/: CMakeLists.txt  config_w_comments.txt  mainc_stable.txt  mainc_w_rssi_readout.txt  prj.conf
virtual-leash/app-inventor/: control-application.aia
virtual-leash/child_image/: hci_rpmsg.conf
virtual-leash/schematic/: led-driver.sch
virtual-leash/src/: RSSI-hci_ctrl.c  auth_service.c  gpio.c  gpio.h  gui.c  gui.h  main.c  otown_logo_convert.c  service.c  service.h
zephyr-patch/: max6675-lvgl-zephyr-2.4.99.patch
